--- a/3_Project/1_EDA_Intro.ipynb
+++ b/3_Project/1_EDA_Intro.ipynb
@@ -143,6 +143,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New Publish\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"New Publish\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
